# web-cashier

./: .env  Cargo.toml  LICENSE  README.md  test.js
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: use-auth.ts  use-avatar.ts  use-debounce.ts
frontend/src/layouts/: dashboard-layouts.tsx
frontend/src/lib/: axios.ts  utils.ts
frontend/src/middleware/: route-protected.tsx
frontend/src/pages/: cashier.tsx  category.tsx  dashboard.tsx  product.tsx  transaction.tsx  users.tsx
frontend/src/stores/: auth-store.ts
frontend/src/types/: category-type.ts  product-type.ts  transaction-type.ts  (+1 more)
migrations/: 20250721203225_create_users_table.sql  20250723051243_create_category_table.sql  20250723085650_create_barang_table.sql  20250727074416_create_transactions_table.sql  20250727074758_create_transactions_items_table.sql
src/: main.rs
src/config/: database.rs
src/errors/: category_error.rs  mod.rs  user_error.rs
src/handlers/: auth.rs  mod.rs
src/middleware/: auth_middleware.rs
src/models/: barang.rs  category.rs  mod.rs  transaction.rs  transaction_items.rs  user.rs
src/routes/: auth.rs  barang.rs  category.rs  mod.rs  transaction.rs  users.rs  welcome.rs
src/schemas/: barang.rs  category.rs  mod.rs  pagination.rs  transaction.rs  transaction_items.rs  user.rs
src/seeders/: mod.rs  product_seeder.rs  user_seeder.rs
src/utils/: argon2.rs  calculate_pagination.rs  db.rs  handler_404.rs  jwt.rs  mod.rs  parse_role.rs  response.rs
src/validations/: transaction.rs
(+54 files in other folders)
